// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefendantDetailsUpdatesComponent when the component is loaded with less than 50 updates should display defendant details updates with no limit message 1`] = `
<defendant-details-updates
  acknowledgeDefendantDetailsUpdatesEmitter={[Function EventEmitter_]}
  breadcrumbs={[Function Array]}
  defendantDetailsUpdates={[Function Object]}
  form={[Function _NgForm]}
  minNumberOfProsecutor={[Function Number]}
  prosecutorOptions={[Function Array]}
  setFilter={[Function EventEmitter_]}
  viewCase={[Function EventEmitter_]}
>
  <breadcrumb-links>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="govuk-!-margin-top-4 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-top="4"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            data-breadcrumb="home"
            href="javascript: void(0)"
            pdk-breadcrumb=""
          >
             Home 
          </a>
        </li>
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <div
            aria-current="page"
          >
             Defendant details updates 
          </div>
        </li>
      </ol>
    </nav>
    <h1
      class="govuk-!-margin-top-6 govuk-!-margin-bottom-6 govuk-heading-xl"
      pdk-margin-vertical="6"
      pdk-typography="heading-xlarge"
    >
       Defendant details updates 
    </h1>
  </breadcrumb-links><pdk-inset-text>
    <div
      class="govuk-inset-text"
    >
      <span
        id="updates-count"
      >
        2
      </span>
      <span>
        cases have
      </span>
       updates 
    </div>
  </pdk-inset-text><pdk-grid
    class="govuk-grid-row"
    container=""
  >
    <pdk-grid
      class="govuk-grid-column-one-half"
      one-half=""
    >
      <form
        class="ng-untouched ng-pristine ng-valid"
        novalidate=""
        pdk-form=""
      >
        <div
          style="display: inline-flex;"
        >
          <pdk-form-field
            label="Filter by region"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label"
                for="pdk-select-GENERATED_ID"
              >
                 Filter by region 
              </label>
              <pdk-select
                class="ng-untouched ng-pristine ng-valid"
                name="selectedRegion"
                required=""
              >
                <select
                  class="govuk-select"
                  id="pdk-select-GENERATED_ID"
                  name="selectedRegion"
                  required=""
                >
                </select>
              </pdk-select>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-group
            class="pdk-form-group"
            style="align-content: end;"
          >
            <button
              class="govuk-!-margin-left-2 govuk-button"
              pdk-button=""
              pdk-margin-left="2"
              type="submit"
            >
              Filter
            </button>
          </pdk-form-group>
        </div>
      </form>
    </pdk-grid>
  </pdk-grid><table
    class="govuk-table"
    id="cases"
    pdk-table=""
  >
    <thead
      class="govuk-table__head"
      pdk-table-head=""
    >
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Name
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Case reference number
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Prosecutor
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Region
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Date of birth
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          What changed?
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Updated on
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Remove from list
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
      pdk-table-body=""
    >
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <td
          class="govuk-table__cell"
          data-role="defendant-name"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            <b>
              John JONES
            </b>
          </a>
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           TVL7105556000 
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           DVLA 
        </td>
        <td
          class="govuk-table__cell"
          data-role="region"
          pdk-table-cell=""
        >
           London 
        </td>
        <td
          class="govuk-table__cell"
          data-role="date-of-birth"
          pdk-table-cell=""
        >
           17 Oct 1977 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <what-changed>
            <span>
              {
    "firstName": "John",
    "lastName": "Jones",
    "prosecutingAuthority": "DVLA",
    "defendantId": "1844b883-1646-428a-a0f8-cb92706af5d2",
    "caseId": "842054bb-3e72-4166-ae67-52355f047765",
    "region": "London",
    "caseUrn": "TVL7105556000",
    "dateOfBirth": "1977-10-17",
    "nameUpdated": true,
    "dateOfBirthUpdated": true,
    "addressUpdated": true,
    "updatedOn": "2019-04-04"
  }
            </span>
            <span>
            </span>
          </what-changed>
        </td>
        <td
          class="govuk-table__cell"
          data-role="updated-on"
          pdk-table-cell=""
        >
           04 Apr 2019 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            data-role="remove-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            Remove
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <td
          class="govuk-table__cell"
          data-role="defendant-name"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            <b>
              Bob LAST
            </b>
          </a>
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           TVL9772166531 
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           DVLA 
        </td>
        <td
          class="govuk-table__cell"
          data-role="region"
          pdk-table-cell=""
        >
           London 
        </td>
        <td
          class="govuk-table__cell"
          data-role="date-of-birth"
          pdk-table-cell=""
        >
           19 Feb 1991 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <what-changed>
            <span>
              {
    "firstName": "Bob",
    "lastName": "Last",
    "prosecutingAuthority": "DVLA",
    "defendantId": "4ab78156-d8d0-4b99-9e96-da50a311aaba",
    "caseId": "12ca0803-d10b-44dd-bf6b-c0242c207e55",
    "region": "London",
    "caseUrn": "TVL9772166531",
    "dateOfBirth": "1991-02-19",
    "nameUpdated": true,
    "dateOfBirthUpdated": true,
    "addressUpdated": true,
    "updatedOn": "2019-04-04"
  }
            </span>
            <span>
            </span>
          </what-changed>
        </td>
        <td
          class="govuk-table__cell"
          data-role="updated-on"
          pdk-table-cell=""
        >
           04 Apr 2019 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            data-role="remove-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            Remove
          </a>
        </td>
      </tr>
    </tbody>
  </table><button
    class="govuk-button"
    id="back-button"
    pdk-button=""
    routerlink="/"
    tabindex="0"
  >
     Back to home 
  </button>
</defendant-details-updates>
`;

exports[`DefendantDetailsUpdatesComponent when the component is loaded with more than 50 updates should display defendant details updates with limit message 1`] = `
<defendant-details-updates
  acknowledgeDefendantDetailsUpdatesEmitter={[Function EventEmitter_]}
  breadcrumbs={[Function Array]}
  defendantDetailsUpdates={[Function Object]}
  form={[Function _NgForm]}
  minNumberOfProsecutor={[Function Number]}
  prosecutorOptions={[Function Array]}
  setFilter={[Function EventEmitter_]}
  viewCase={[Function EventEmitter_]}
>
  <breadcrumb-links>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="govuk-!-margin-top-4 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-top="4"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            data-breadcrumb="home"
            href="javascript: void(0)"
            pdk-breadcrumb=""
          >
             Home 
          </a>
        </li>
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <div
            aria-current="page"
          >
             Defendant details updates 
          </div>
        </li>
      </ol>
    </nav>
    <h1
      class="govuk-!-margin-top-6 govuk-!-margin-bottom-6 govuk-heading-xl"
      pdk-margin-vertical="6"
      pdk-typography="heading-xlarge"
    >
       Defendant details updates 
    </h1>
  </breadcrumb-links><pdk-inset-text>
    <div
      class="govuk-inset-text"
    >
      <span
        id="updates-count"
      >
        51
      </span>
      <span>
        cases have
      </span>
       updates 
      <span>
        (first 50 shown below)
      </span>
    </div>
  </pdk-inset-text><pdk-grid
    class="govuk-grid-row"
    container=""
  >
    <pdk-grid
      class="govuk-grid-column-one-half"
      one-half=""
    >
      <form
        class="ng-untouched ng-pristine ng-valid"
        novalidate=""
        pdk-form=""
      >
        <div
          style="display: inline-flex;"
        >
          <pdk-form-field
            label="Filter by region"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label"
                for="pdk-select-GENERATED_ID"
              >
                 Filter by region 
              </label>
              <pdk-select
                class="ng-untouched ng-pristine ng-valid"
                name="selectedRegion"
                required=""
              >
                <select
                  class="govuk-select"
                  id="pdk-select-GENERATED_ID"
                  name="selectedRegion"
                  required=""
                >
                </select>
              </pdk-select>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-group
            class="pdk-form-group"
            style="align-content: end;"
          >
            <button
              class="govuk-!-margin-left-2 govuk-button"
              pdk-button=""
              pdk-margin-left="2"
              type="submit"
            >
              Filter
            </button>
          </pdk-form-group>
        </div>
      </form>
    </pdk-grid>
  </pdk-grid><table
    class="govuk-table"
    id="cases"
    pdk-table=""
  >
    <thead
      class="govuk-table__head"
      pdk-table-head=""
    >
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Name
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Case reference number
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Prosecutor
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Region
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Date of birth
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          What changed?
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Updated on
        </th>
        <th
          class="govuk-table__cell"
          pdk-table-header=""
          scope="col"
        >
          Remove from list
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
      pdk-table-body=""
    >
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <td
          class="govuk-table__cell"
          data-role="defendant-name"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            <b>
              John JONES
            </b>
          </a>
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           TVL7105556000 
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           DVLA 
        </td>
        <td
          class="govuk-table__cell"
          data-role="region"
          pdk-table-cell=""
        >
           London 
        </td>
        <td
          class="govuk-table__cell"
          data-role="date-of-birth"
          pdk-table-cell=""
        >
           17 Oct 1977 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <what-changed>
            <span>
              {
    "firstName": "John",
    "lastName": "Jones",
    "prosecutingAuthority": "DVLA",
    "defendantId": "1844b883-1646-428a-a0f8-cb92706af5d2",
    "caseId": "842054bb-3e72-4166-ae67-52355f047765",
    "region": "London",
    "caseUrn": "TVL7105556000",
    "dateOfBirth": "1977-10-17",
    "nameUpdated": true,
    "dateOfBirthUpdated": true,
    "addressUpdated": true,
    "updatedOn": "2019-04-04"
  }
            </span>
            <span>
            </span>
          </what-changed>
        </td>
        <td
          class="govuk-table__cell"
          data-role="updated-on"
          pdk-table-cell=""
        >
           04 Apr 2019 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            data-role="remove-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            Remove
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        pdk-table-row=""
      >
        <td
          class="govuk-table__cell"
          data-role="defendant-name"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            <b>
              Bob LAST
            </b>
          </a>
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           TVL9772166531 
        </td>
        <td
          class="govuk-table__cell"
          data-role="urn"
          pdk-table-cell=""
        >
           DVLA 
        </td>
        <td
          class="govuk-table__cell"
          data-role="region"
          pdk-table-cell=""
        >
           London 
        </td>
        <td
          class="govuk-table__cell"
          data-role="date-of-birth"
          pdk-table-cell=""
        >
           19 Feb 1991 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <what-changed>
            <span>
              {
    "firstName": "Bob",
    "lastName": "Last",
    "prosecutingAuthority": "DVLA",
    "defendantId": "4ab78156-d8d0-4b99-9e96-da50a311aaba",
    "caseId": "12ca0803-d10b-44dd-bf6b-c0242c207e55",
    "region": "London",
    "caseUrn": "TVL9772166531",
    "dateOfBirth": "1991-02-19",
    "nameUpdated": true,
    "dateOfBirthUpdated": true,
    "addressUpdated": true,
    "updatedOn": "2019-04-04"
  }
            </span>
            <span>
            </span>
          </what-changed>
        </td>
        <td
          class="govuk-table__cell"
          data-role="updated-on"
          pdk-table-cell=""
        >
           04 Apr 2019 
        </td>
        <td
          class="govuk-table__cell"
          pdk-table-cell=""
        >
          <a
            class="govuk-link"
            data-role="remove-link"
            href="javascript:void(0)"
            pdk-link=""
          >
            Remove
          </a>
        </td>
      </tr>
    </tbody>
  </table><button
    class="govuk-button"
    id="back-button"
    pdk-button=""
    routerlink="/"
    tabindex="0"
  >
     Back to home 
  </button>
</defendant-details-updates>
`;
